[project]
name = "chatgpt-cli"
version = "0.1.0"  # keep in sync with scripts/_version.py
description = "CLI tool for querying ChatGPT via stealth browser automation"
requires-python = ">=3.10"
dependencies = [
    "nodriver",
    "camoufox",
    "brotli",
    "python-dotenv",
    "pycryptodome",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# sys.path manipulation must precede local imports
"scripts/chatgpt.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
